Решение 1ой задачи

--- a/index.html
+++ b/index.html
@@ -12,49 +12,14 @@
     />
   </head>
   <body>
-    <!-- <script type="module" src="./js/lesson_1/script-1.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_1/script-2.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_1/script-3.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_1/script-4.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_1/script-5.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_1/script-6.js"></script> -->
-    <!-- <script type="module" src="./js/7/1.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_2/script_1.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_2/script_2.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_2/script_3.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_2/script_4.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_2/script_5.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_2/script_6.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_2/script_7.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_2/script_8.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_2/script_9.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_3/script_1.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_3/script_2.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_3/script_3.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_3/script_4.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_3/script_5.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_3/script_6.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_3/script_7.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_4/script_1.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_4/script_2.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_4/script_3.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_4/script_4.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_4/script_5.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_5/script_1.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_5/script_2.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_5/script_3.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_5/script_4.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_5/script_5.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_1.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_2.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_3.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_4.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_5.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_6.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_7.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_8.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_9.js"></script> -->
-    <!-- <script type="module" src="./js/lesson_6/script_10.js"></script> -->
-    <script type="module" src="./js/lesson_7/script_1.js"></script>
+    <ul>
+      <li><a href="./html/leson_7/task_1/task_№_1.html"> Задача №1</a></li>
+      <li><a href=""> Задача №2</a></li>
+      <li><a href=""> Задача №3</a></li>
+      <li><a href=""> Задача №4</a></li>
+      <li><a href=""> Задача №5</a></li>
+      <li><a href=""> Задача №6</a></li>
+      <li><a href=""> Задача №7</a></li>
+    </ul>
   </body>
 </html>
