--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <ul>
       <li><a href="./html/leson_7/task_1/task_№_1.html"> Задача №1</a></li>
-      <li><a href=""> Задача №2</a></li>
+      <li><a href="./html/leson_7/task_1/task_№_2.html"> Задача №2</a></li>
       <li><a href=""> Задача №3</a></li>
       <li><a href=""> Задача №4</a></li>
       <li><a href=""> Задача №5</a></li>
