--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li><a href="./html/leson_7/task_1/task_№_1.html"> Задача №1</a></li>
       <li><a href="./html/leson_7/task_1/task_№_2.html"> Задача №2</a></li>
       <li><a href="./html/leson_7/task_1/task_№_3.html"> Задача №3</a></li>
-      <li><a href=""> Задача №4</a></li>
+      <li><a href="./html/leson_7/task_1/task_№_4.html"> Задача №4</a></li>
       <li><a href=""> Задача №5</a></li>
       <li><a href=""> Задача №6</a></li>
       <li><a href=""> Задача №7</a></li>
