решение 7ой задачи

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <li><a href="./html/leson_7/task_1/task_№_4.html"> Задача №4</a></li>
       <li><a href="./html/leson_7/task_1/task_№_5.html"> Задача №5</a></li>
       <li><a href="./html/leson_7/task_1/task_№_6.html"> Задача №6</a></li>
-      <li><a href=""> Задача №7</a></li>
+      <li><a href="./html/leson_7/task_1/task_№_7.html"> Задача №7</a></li>
     </ul>
   </body>
 </html>
