Изминил название js и html файлов

--- a/html/leson_7/task_1/task_3.html
+++ b/html/leson_7/task_1/task_3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №6</title>
+    <title>ЗАДАЧА №3</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
@@ -14,13 +14,8 @@
   <body>
     <a href="/index.html">На главную</a>
 
-    <input
-      type="text"
-      id="validation-input"
-      data-length="6"
-      placeholder="Введи 6 символов"
-    />
+    <ul id="gallery"></ul>
 
-    <script type="module" src="/js/leson_7/task_1/task_№_6.js"></script>
+    <script type="module" src="/js/leson_7/task_1/task_3.js"></script>
   </body>
 </html>
