--- a/html/leson_7/task_1/task_4.html
+++ b/html/leson_7/task_1/task_4.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №5</title>
+    <title>ЗАДАЧА №4</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
@@ -13,9 +13,12 @@
   <body>
     <a href="/index.html">На главную</a>
 
-    <input type="text" placeholder="Ваше имя?" id="name-input" />
-    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+    <div id="counter">
+      <button type="button" data-action="decrement">-1</button>
+      <span id="value">0</span>
+      <button type="button" data-action="increment">+1</button>
+    </div>
 
-    <script type="module" src="/js/leson_7/task_1/task_№_5.js"></script>
+    <script type="module" src="/js/leson_7/task_1/task_4.js"></script>
   </body>
 </html>
