--- a/html/leson_7/task_1/task_5.html
+++ b/html/leson_7/task_1/task_5.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №2</title>
+    <title>ЗАДАЧА №5</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
@@ -13,8 +13,9 @@
   <body>
     <a href="/index.html">На главную</a>
 
-    <ul id="ingredients"></ul>
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
 
-    <script type="module" src="/js/leson_7/task_1/task_№_2.js"></script>
+    <script type="module" src="/js/leson_7/task_1/task_5.js"></script>
   </body>
 </html>
