--- a/html/leson_7/task_1/task_6.html
+++ b/html/leson_7/task_1/task_6.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №4</title>
+    <title>ЗАДАЧА №6</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
     <a href="/index.html">На главную</a>
 
-    <div id="counter">
-      <button type="button" data-action="decrement">-1</button>
-      <span id="value">0</span>
-      <button type="button" data-action="increment">+1</button>
-    </div>
+    <input
+      type="text"
+      id="validation-input"
+      data-length="6"
+      placeholder="Введи 6 символов"
+    />
 
-    <script type="module" src="/js/leson_7/task_1/task_№_4.js"></script>
+    <script type="module" src="/js/leson_7/task_1/task_6.js"></script>
   </body>
 </html>
