--- a/html/leson_7/task_1/task_7.html
+++ b/html/leson_7/task_1/task_7.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №3</title>
+    <title>ЗАДАЧА №7</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
@@ -14,8 +14,10 @@
   <body>
     <a href="/index.html">На главную</a>
 
-    <ul id="gallery"></ul>
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
 
-    <script type="module" src="/js/leson_7/task_1/task_№_3.js"></script>
+    <script type="module" src="/js/leson_7/task_1/task_7.js"></script>
   </body>
 </html>
