--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   </head>
   <body>
     <ul>
-      <li><a href="./html/leson_7/task_1/task_№_1.html"> Задача №1</a></li>
-      <li><a href="./html/leson_7/task_1/task_№_2.html"> Задача №2</a></li>
-      <li><a href="./html/leson_7/task_1/task_№_3.html"> Задача №3</a></li>
-      <li><a href="./html/leson_7/task_1/task_№_4.html"> Задача №4</a></li>
-      <li><a href="./html/leson_7/task_1/task_№_5.html"> Задача №5</a></li>
-      <li><a href="./html/leson_7/task_1/task_№_6.html"> Задача №6</a></li>
-      <li><a href="./html/leson_7/task_1/task_№_7.html"> Задача №7</a></li>
+      <li><a href="./html/leson_7/task_1/task_1.html"> Задача №1</a></li>
+      <li><a href="./html/leson_7/task_1/task_2.html"> Задача №2</a></li>
+      <li><a href="./html/leson_7/task_1/task_3.html"> Задача №3</a></li>
+      <li><a href="./html/leson_7/task_1/task_4.html"> Задача №4</a></li>
+      <li><a href="./html/leson_7/task_1/task_5.html"> Задача №5</a></li>
+      <li><a href="./html/leson_7/task_1/task_6.html"> Задача №6</a></li>
+      <li><a href="./html/leson_7/task_1/task_7.html"> Задача №7</a></li>
     </ul>
   </body>
 </html>
