--- a/html/leson_7/tasks/task_7.html
+++ b/html/leson_7/tasks/task_7.html
@@ -3,19 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №5</title>
+    <title>ЗАДАЧА №7</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
     <a href="/index.html">На главную</a>
 
-    <input type="text" placeholder="Ваше имя?" id="name-input" />
-    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
 
-    <script type="module" src="/js/leson_7/task_1/task_5.js"></script>
+    <script type="module" src="/js/leson_7/tasks/task_7.js"></script>
   </body>
 </html>
