--- a/html/leson_7/tasks/task_3.html
+++ b/html/leson_7/tasks/task_3.html
@@ -16,6 +16,6 @@
 
     <ul id="gallery"></ul>
 
-    <script type="module" src="/js/leson_7/tasks/task_3.js"></script>
+    <script type="module" src="/js/leson_7/task_3.js"></script>
   </body>
 </html>
