--- a/html/leson_7/tasks/task_2.html
+++ b/html/leson_7/tasks/task_2.html
@@ -15,6 +15,6 @@
 
     <ul id="ingredients"></ul>
 
-    <script type="module" src="/js/leson_7/task_2.js"></script>
+    <script type="module" src="/js/task_2.js"></script>
   </body>
 </html>
