--- a/html/leson_7/tasks/task_6.html
+++ b/html/leson_7/tasks/task_6.html
@@ -21,6 +21,6 @@
       placeholder="Введи 6 символов"
     />
 
-    <script type="module" src="/js/leson_7/task_6.js"></script>
+    <script type="module" src="/js/task_6.js"></script>
   </body>
 </html>
