--- a/html/leson_7/tasks/task_7.html
+++ b/html/leson_7/tasks/task_7.html
@@ -18,6 +18,6 @@
     <br />
     <span id="text">Абракадабра!</span>
 
-    <script type="module" src="/js/leson_7/task_7.js"></script>
+    <script type="module" src="/js/task_7.js"></script>
   </body>
 </html>
