сделал прямой путь папка => файл, убрал нижюподчеркивание

--- a/html/task3.html
+++ b/html/task3.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №7</title>
+    <title>ЗАДАЧА №3</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
@@ -14,10 +14,8 @@
   <body>
     <a href="/index.html">На главную</a>
 
-    <input id="font-size-control" type="range" />
-    <br />
-    <span id="text">Абракадабра!</span>
+    <ul id="gallery"></ul>
 
-    <script type="module" src="/js/task_7.js"></script>
+    <script type="module" src="/js/task3.js"></script>
   </body>
 </html>
