--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   </head>
   <body>
     <ul>
-      <li><a href="./html/leson_7/tasks/task_1.html"> Задача №1</a></li>
-      <li><a href="./html/leson_7/tasks/task_2.html"> Задача №2</a></li>
-      <li><a href="./html/leson_7/tasks/task_3.html"> Задача №3</a></li>
-      <li><a href="./html/leson_7/tasks/task_4.html"> Задача №4</a></li>
-      <li><a href="./html/leson_7/tasks/task_5.html"> Задача №5</a></li>
-      <li><a href="./html/leson_7/tasks/task_6.html"> Задача №6</a></li>
-      <li><a href="./html/leson_7/tasks/task_7.html"> Задача №7</a></li>
+      <li><a href="./html/task1.html"> Задача №1</a></li>
+      <li><a href="./html/task2.html"> Задача №2</a></li>
+      <li><a href="./html/task3.html"> Задача №3</a></li>
+      <li><a href="./html/task4.html"> Задача №4</a></li>
+      <li><a href="./html/task5.html"> Задача №5</a></li>
+      <li><a href="./html/task6.html"> Задача №6</a></li>
+      <li><a href="./html/task7.html"> Задача №7</a></li>
     </ul>
   </body>
 </html>
