--- a/html/task2.html
+++ b/html/task2.html
@@ -3,24 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №6</title>
+    <title>ЗАДАЧА №2</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
     <a href="/index.html">На главную</a>
 
-    <input
-      type="text"
-      id="validation-input"
-      data-length="6"
-      placeholder="Введи 6 символов"
-    />
+    <ul id="ingredients"></ul>
 
-    <script type="module" src="/js/task_6.js"></script>
+    <script type="module" src="/js/task2.js"></script>
   </body>
 </html>
