--- a/html/task4.html
+++ b/html/task4.html
@@ -3,19 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №3</title>
+    <title>ЗАДАЧА №4</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
     <a href="/index.html">На главную</a>
 
-    <ul id="gallery"></ul>
+    <div id="counter">
+      <button type="button" data-action="decrement">-1</button>
+      <span id="value">0</span>
+      <button type="button" data-action="increment">+1</button>
+    </div>
 
-    <script type="module" src="/js/task_3.js"></script>
+    <script type="module" src="/js/task4.js"></script>
   </body>
 </html>
