перенес html файлы в корень

--- a/task1.html
+++ b/task1.html
@@ -44,6 +44,6 @@
         </ul>
       </li>
     </ul>
-    <script type="module" src="/js/task1.js"></script>
+    <script type="module" src="./js/task1.js"></script>
   </body>
 </html>
