--- a/task2.html
+++ b/task2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №5</title>
+    <title>ЗАДАЧА №2</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
@@ -13,9 +13,8 @@
   <body>
     <a href="/index.html">На главную</a>
 
-    <input type="text" placeholder="Ваше имя?" id="name-input" />
-    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+    <ul id="ingredients"></ul>
 
-    <script type="module" src="/js/task5.js"></script>
+    <script type="module" src="./js/task2.js"></script>
   </body>
 </html>
