--- a/task3.html
+++ b/task3.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №2</title>
+    <title>ЗАДАЧА №3</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
     <a href="/index.html">На главную</a>
 
-    <ul id="ingredients"></ul>
+    <ul id="gallery"></ul>
 
-    <script type="module" src="/js/task2.js"></script>
+    <script type="module" src="./js/task3.js"></script>
   </body>
 </html>
