--- a/task4.html
+++ b/task4.html
@@ -19,6 +19,6 @@
       <button type="button" data-action="increment">+1</button>
     </div>
 
-    <script type="module" src="/js/task4.js"></script>
+    <script type="module" src="./js/task4.js"></script>
   </body>
 </html>
