--- a/task5.html
+++ b/task5.html
@@ -3,24 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №6</title>
+    <title>ЗАДАЧА №5</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
     />
-    <link rel="stylesheet" href="/styles.css" />
   </head>
 
   <body>
     <a href="/index.html">На главную</a>
 
-    <input
-      type="text"
-      id="validation-input"
-      data-length="6"
-      placeholder="Введи 6 символов"
-    />
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
 
-    <script type="module" src="/js/task6.js"></script>
+    <script type="module" src="./js/task5.js"></script>
   </body>
 </html>
