--- a/task6.html
+++ b/task6.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ЗАДАЧА №7</title>
+    <title>ЗАДАЧА №6</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css"
@@ -14,10 +14,13 @@
   <body>
     <a href="/index.html">На главную</a>
 
-    <input id="font-size-control" type="range" />
-    <br />
-    <span id="text">Абракадабра!</span>
+    <input
+      type="text"
+      id="validation-input"
+      data-length="6"
+      placeholder="Введи 6 символов"
+    />
 
-    <script type="module" src="/js/task7.js"></script>
+    <script type="module" src="./js/task6.js"></script>
   </body>
 </html>
