--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       <li><a href="./task5.html"> Задача №5</a></li>
       <li><a href="./task6.html"> Задача №6</a></li>
       <li><a href="./task7.html"> Задача №7</a></li>
+      <li><a href="./task8.html"> Задача №8</a></li>
     </ul>
   </body>
 </html>
